# agent-capability-broker

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  identifier-gate.yml
docs/: capabilities.example.toml  capability-model.md  publication-review.md
githooks/: pre-commit
plans/: 001-manifest-and-doctor.md  002-act-path.md  003-shim-surface.md  004-cred-discoverability.md  005-suite-cohesion-capability-provisioning.md  006-doctor-conformance-and-e2e-proof.md  007-codex-capability-parity.md  008-provider-neutral-secret-injection.md  009-declared-secret-onboarding.md
plugins/acb/.codex-plugin/: plugin.json
plugins/acb/skills/acb-capabilities/: SKILL.md
reflections/: 2026-06-20-mimo-v2-5-pro-2.md  2026-06-20-mimo-v2-5-pro-3.md  2026-06-20-mimo-v2-5-pro.md  2026-07-03-glm-5-2.md  2026-07-04-glm-5-2-2.md  2026-07-04-glm-5-2.md  2026-07-05-glm-5-2.md  2026-07-18-glm-5-2.md
scripts/: check_committed_identifiers.py  install-git-hooks.sh
src/agent_capability_broker/: __init__.py  __main__.py  adapters.py  cli.py  cred_vault.py  model.py  provenance.py  providers.py  secret_sources.py
tests/: test_add_wiring.py  test_arch.py  test_cli_conformance.py  test_codex_plugin.py  test_codex_plugin_live.py  test_codex_skill_live.py  test_cred_discoverability.py  test_cred_vault_multi.py  test_doctor_conformance.py  test_e2e_inspect.py  test_exec.py  test_exec_composed.py  test_hermes_adapter.py  test_install_harness.py  test_model.py  test_reconcile.py  test_shims.py  test_suite_config.py  test_suite_secrets.py  test_uninstall.py
