[project]
name = "agent-capability-broker"
version = "0.1.0"
description = "Keep agents at capability parity across harnesses (creds, E2E tooling) from one manifest"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "hraedon" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
]
# The deterministic core is stdlib-only by charter (tomllib, json, subprocess,
# argparse): the verdict/truth path has no third-party deps. platformdirs is the
# sole runtime dep — config-dir portability only (Plan 003 WI-3.1), exempted in
# tests/test_arch.py::STDLIB_OK as the sole permitted non-stdlib core import.
dependencies = ["platformdirs>=4.3,<5"]

[project.optional-dependencies]
# Pins include upper bounds to keep CI reproducible against future majors.
dev = [
    "pytest>=8.3,<9",
    "ruff>=0.7,<1",
    "mypy>=1.13,<2",
    # pyyaml so the HermesAdapter tests (importorskip("yaml")) run in CI under
    # the plain [dev] install, not silently skipped.
    "pyyaml>=6.0,<7",
]
# The cred provider's Vault/HTTP client. The core never imports this; when
# absent, `cred` inspect degrades to UNKNOWN with a reason instead of crashing.
cred = [
    "hvac>=2.1,<3",
]
# Provider-neutral suite resolver. Imported lazily by source="suite" only;
# doctor and the existing Vault/environment paths work without it.
suite-secrets = [
    "regista>=0.5.1,<0.6",
]
# Hermes config is YAML, parsed by pyyaml. The core never imports this; on hosts
# without Hermes the read path degrades to empty (a warning, not a crash) and the
# act path (`add_mcp_server`) raises a clear install hint.
hermes = [
    "pyyaml>=6.0,<7",
]
# Optional narration layer, kept out of the truth path. Empty placeholder.
narration = []

[tool.uv.sources]
# Regista is a suite sibling and is not published under the suite's version on
# PyPI (the registry name currently resolves to an unrelated 0.0.0 package).
# Keep local development and clean `uv run --extra suite-secrets` checks bound
# to the public facade implementation this component is designed against.
regista = { path = "../regista", editable = true }

[project.urls]
Source = "https://github.com/hraedon/agent-capability-broker"
Issues = "https://github.com/hraedon/agent-capability-broker/issues"

[project.scripts]
acb = "agent_capability_broker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_capability_broker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "samples: requires copies of real harness configs in samples/ (skipped when absent)",
    "cred: requires the [cred] extra (hvac) for Vault reachability checks",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true

# hvac (the optional [cred] backend) ships no type stubs.
[[tool.mypy.overrides]]
module = "hvac.*"
ignore_missing_imports = true

# pyyaml is imported lazily by HermesAdapter (the [hermes] extra); no type stubs.
[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true
